Feat: UpdateStatus + Delete task handlers + taskNew event for socket
